run generator with latest api spec
