# Kinde.Api/Model/GetPermissionsResponse.cs
@@ -1,0 +1,188 @@
+/*
+ * Kinde Management API
+ *
+ * Provides endpoints to manage your Kinde Businesses
+ *
+ * The version of the OpenAPI document: 1
+ * Contact: support@kinde.com
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using System.ComponentModel.DataAnnotations;
+using FileParameter = Kinde.Api.Client.FileParameter;
+using OpenAPIDateConverter = Kinde.Api.Client.OpenAPIDateConverter;
+
+namespace Kinde.Api.Model
+{
+    /// <summary>
+    /// GetPermissionsResponse
+    /// </summary>
+    [DataContract(Name = "get_permissions_response")]
+    public partial class GetPermissionsResponse : IEquatable<GetPermissionsResponse>, IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="GetPermissionsResponse" /> class.
+        /// </summary>
+        /// <param name="code">Response code..</param>
+        /// <param name="message">Response message..</param>
+        /// <param name="permissions">permissions.</param>
+        /// <param name="nextToken">Pagination token..</param>
+        public GetPermissionsResponse(string code = default(string), string message = default(string), List<Permissions> permissions = default(List<Permissions>), string nextToken = default(string))
+        {
+            this.Code = code;
+            this.Message = message;
+            this.Permissions = permissions;
+            this.NextToken = nextToken;
+        }
+
+        /// <summary>
+        /// Response code.
+        /// </summary>
+        /// <value>Response code.</value>
+        [DataMember(Name = "code", EmitDefaultValue = false)]
+        public string Code { get; set; }
+
+        /// <summary>
+        /// Response message.
+        /// </summary>
+        /// <value>Response message.</value>
+        [DataMember(Name = "message", EmitDefaultValue = false)]
+        public string Message { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Permissions
+        /// </summary>
+        [DataMember(Name = "permissions", EmitDefaultValue = false)]
+        public List<Permissions> Permissions { get; set; }
+
+        /// <summary>
+        /// Pagination token.
+        /// </summary>
+        /// <value>Pagination token.</value>
+        [DataMember(Name = "next_token", EmitDefaultValue = false)]
+        public string NextToken { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class GetPermissionsResponse {\n");
+            sb.Append("  Code: ").Append(Code).Append("\n");
+            sb.Append("  Message: ").Append(Message).Append("\n");
+            sb.Append("  Permissions: ").Append(Permissions).Append("\n");
+            sb.Append("  NextToken: ").Append(NextToken).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as GetPermissionsResponse);
+        }
+
+        /// <summary>
+        /// Returns true if GetPermissionsResponse instances are equal
+        /// </summary>
+        /// <param name="input">Instance of GetPermissionsResponse to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(GetPermissionsResponse input)
+        {
+            if (input == null)
+            {
+                return false;
+            }
+            return 
+                (
+                    this.Code == input.Code ||
+                    (this.Code != null &&
+                    this.Code.Equals(input.Code))
+                ) && 
+                (
+                    this.Message == input.Message ||
+                    (this.Message != null &&
+                    this.Message.Equals(input.Message))
+                ) && 
+                (
+                    this.Permissions == input.Permissions ||
+                    this.Permissions != null &&
+                    input.Permissions != null &&
+                    this.Permissions.SequenceEqual(input.Permissions)
+                ) && 
+                (
+                    this.NextToken == input.NextToken ||
+                    (this.NextToken != null &&
+                    this.NextToken.Equals(input.NextToken))
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.Code != null)
+                {
+                    hashCode = (hashCode * 59) + this.Code.GetHashCode();
+                }
+                if (this.Message != null)
+                {
+                    hashCode = (hashCode * 59) + this.Message.GetHashCode();
+                }
+                if (this.Permissions != null)
+                {
+                    hashCode = (hashCode * 59) + this.Permissions.GetHashCode();
+                }
+                if (this.NextToken != null)
+                {
+                    hashCode = (hashCode * 59) + this.NextToken.GetHashCode();
+                }
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+}
