# Kinde.Api/Model/UserIdentitiesInner.cs
@@ -1,0 +1,148 @@
+/*
+ * Kinde Management API
+ *
+ * Provides endpoints to manage your Kinde Businesses
+ *
+ * The version of the OpenAPI document: 1
+ * Contact: support@kinde.com
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using System.ComponentModel.DataAnnotations;
+using FileParameter = Kinde.Api.Client.FileParameter;
+using OpenAPIDateConverter = Kinde.Api.Client.OpenAPIDateConverter;
+
+namespace Kinde.Api.Model
+{
+    /// <summary>
+    /// UserIdentitiesInner
+    /// </summary>
+    [DataContract(Name = "user_identities_inner")]
+    public partial class UserIdentitiesInner : IEquatable<UserIdentitiesInner>, IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="UserIdentitiesInner" /> class.
+        /// </summary>
+        /// <param name="type">type.</param>
+        /// <param name="identity">identity.</param>
+        public UserIdentitiesInner(string type = default(string), string identity = default(string))
+        {
+            this.Type = type;
+            this.Identity = identity;
+        }
+
+        /// <summary>
+        /// Gets or Sets Type
+        /// </summary>
+        [DataMember(Name = "type", EmitDefaultValue = false)]
+        public string Type { get; set; }
+
+        /// <summary>
+        /// Gets or Sets Identity
+        /// </summary>
+        [DataMember(Name = "identity", EmitDefaultValue = false)]
+        public string Identity { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class UserIdentitiesInner {\n");
+            sb.Append("  Type: ").Append(Type).Append("\n");
+            sb.Append("  Identity: ").Append(Identity).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as UserIdentitiesInner);
+        }
+
+        /// <summary>
+        /// Returns true if UserIdentitiesInner instances are equal
+        /// </summary>
+        /// <param name="input">Instance of UserIdentitiesInner to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(UserIdentitiesInner input)
+        {
+            if (input == null)
+            {
+                return false;
+            }
+            return 
+                (
+                    this.Type == input.Type ||
+                    (this.Type != null &&
+                    this.Type.Equals(input.Type))
+                ) && 
+                (
+                    this.Identity == input.Identity ||
+                    (this.Identity != null &&
+                    this.Identity.Equals(input.Identity))
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.Type != null)
+                {
+                    hashCode = (hashCode * 59) + this.Type.GetHashCode();
+                }
+                if (this.Identity != null)
+                {
+                    hashCode = (hashCode * 59) + this.Identity.GetHashCode();
+                }
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+}
